--- a/Task1/styles/index.css
+++ b/Task1/styles/index.css
@@ -1,16 +1,5 @@
-@font-face {
-	font-family: "YS Text";
-	src: url(../fonts/text-regular.woff2);
-	font-weight: normal;
-}
-@font-face {
-	font-family: "YS Text";
-	src: url(../fonts/text-bold.woff2);
-	font-weight: bold;
-}
-
 * {
-	font-family: 'YS Text', 'Helvetica Neue', Arial, sans-serif;
+	font-family: Arial, Helvetica, sans-serif;
 }
 :root {
 	--c-input: #FFC93D;
@@ -115,6 +104,7 @@ a:hover {
 h1 {
 	font-size: 1.5rem;
 	margin: 0;
+	font-weight: 400;
 }
 p {
 	font-size: 0.95rem;
