--- a/Task1/styles/index.css
+++ b/Task1/styles/index.css
@@ -1,112 +1,117 @@
 * {
+	margin: 0;
 	font-family: Arial, Helvetica, sans-serif;
 }
 :root {
 	--c-input: #FFC93D;
+	--page-max-width: 900px
 }
 
 html {
 	height: 100%;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
 }
 body {
 	height: 100%;
 	width: 100%;
-	max-width: 900px;
-	margin: 0;
 	display: flex;
-	flex-direction: column;
+	justify-content: center;
+	align-items: center;
 }
 
 
-a {
+.link {
 	text-decoration: none;
 	text-decoration-skip-ink: none;
 	color: #0a61ba;
 }
-a:hover {
+.link:hover {
 	text-decoration: underline;
 }
 
 .footer {
+	position: fixed;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	display: flex;
+	justify-content: center;
 	margin: 2em;
 	font-size: 0.8rem;
 }
-.footer a {
+.footer__nav {
+	width: 100%;
+	max-width: var(--page-max-width);
+}
+.footer__link {
 	margin-right: 1em;
 	color: gray;
 }
 
-.root {
-	flex-grow: 1;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-}
-.page {
+
+.main {
 	width: 100%;
+	max-width: var(--page-max-width);
 	display: flex;
 	gap: 1em;
-	padding: 1em;
+	margin: 1em;
 }
 @media (max-width: 700px) {
-	.page {
+	.main {
 		flex-direction: column;
 	}
-	.logo {
+	.header {
 		align-self: center;
 	}
 }
-.block {
-	margin-bottom: 2em;
-}
 
-.logo {
+.header {
 	width: 110px;
 }
-.logo img {
+.header__img {
 	width: 100%;
 }
-.content {
+.article {
 	flex-grow: 1;
+	padding: 0.5em;
+}
+.section {
+	margin-bottom: 2em;
 }
 
 .input {
 	display: flex;
-	height: 2.8em;
+	font-size: 1.15rem;
+	height: 2.5em;
 }
-.input > * {
-	font-size: 1.16rem;
-}
-.input input {
+.input__input {
 	position: relative;
+	font-size: inherit;
 	flex-grow: 1;
-	padding: 0.5em;
+	min-width: 10em;
+	padding: 0 0.5em;
 	border: 2px solid var(--c-input);
 	border-radius: 0.5em 0.3em 0.3em 0.5em;
 }
-.input button {
+.input__button {
+	font-size: inherit;
 	background-color: var(--c-input);
 	border: 2px solid var(--c-input);
 	border-radius:  0 0.5em 0.5em 0;
 	padding: 0.5em 1em;
 	margin-left: -0.3em;
 }
-.input button:hover {
+.input__button:hover {
 	text-decoration: underline;
 }
-.input button:active {
+.input__button:active {
 	text-decoration: none;
 }
 
-h1 {
+.h1 {
 	font-size: 1.5rem;
-	margin: 0;
 	font-weight: 400;
 }
-p {
+.p {
 	font-size: 0.95rem;
 	margin-top: 0.5em;
 }
@@ -122,7 +127,7 @@ p {
 		grid-template-columns: 1fr;
 	}
 }
-.links li {
+.links__item {
 	list-style: none;
 	padding: 0.4em 0;
 }
@@ -131,6 +136,6 @@ p {
 	width: 1em;
 	display: inline-block;
 }
-.icon img {
+.icon__img {
 	width: 100%;
 }
