--- a/Task1/styles/index.css
+++ b/Task1/styles/index.css
@@ -10,14 +10,10 @@
 html {
 	height: 100%;
 }
-body {
+body, .main {
 	height: 100%;
 	width: 100%;
-	display: flex;
-	justify-content: center;
-	align-items: center;
 }
-
 
 .link {
 	text-decoration: none;
@@ -48,42 +44,50 @@ body {
 }
 
 
-.main {
+.page-404 {
+	width: 100%;
+	height: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.page-404__content {
 	width: 100%;
 	max-width: var(--page-max-width);
 	display: flex;
 	gap: 1em;
-	margin: 1em;
 }
 @media (max-width: 700px) {
-	.main {
+	.page-404__content {
 		flex-direction: column;
 	}
-	.header {
+	.page-404__header {
 		align-self: center;
 	}
 }
 
-.header {
+.page-404__header {
 	width: 110px;
+	padding-top: 0.7em;
+	margin-left: 0.2em;
 }
 .header__img {
 	width: 100%;
 }
-.article {
+.page-404__article {
 	flex-grow: 1;
 	padding: 0.5em;
 }
-.section {
+.article__section {
 	margin-bottom: 2em;
 }
 
-.input {
+.article__search {
 	display: flex;
 	font-size: 1.15rem;
 	height: 2.5em;
 }
-.input__input {
+.search__input {
 	position: relative;
 	font-size: inherit;
 	flex-grow: 1;
@@ -92,7 +96,7 @@ body {
 	border: 2px solid var(--c-input);
 	border-radius: 0.5em 0.3em 0.3em 0.5em;
 }
-.input__button {
+.search__button {
 	font-size: inherit;
 	background-color: var(--c-input);
 	border: 2px solid var(--c-input);
@@ -107,23 +111,23 @@ body {
 	text-decoration: none;
 }
 
-.h1 {
+.article__h1 {
 	font-size: 1.5rem;
 	font-weight: 400;
 }
-.p {
+.article__p {
 	font-size: 0.95rem;
 	margin-top: 0.5em;
 }
 
-.links {
+.article__links {
 	display: grid;
 	grid-template-columns: 1fr 1fr;
 	padding: 0;
 	font-size: 0.95rem;
 }
 @media (max-width: 580px) {
-	.links {
+	.article__links {
 		grid-template-columns: 1fr;
 	}
 }
@@ -131,8 +135,7 @@ body {
 	list-style: none;
 	padding: 0.4em 0;
 }
-
-.icon {
+.links__icon {
 	width: 1em;
 	display: inline-block;
 }
