--- a/Task3/src/components/BookCard/styles.module.css
+++ b/Task3/src/components/BookCard/styles.module.css
@@ -7,13 +7,24 @@
 	flex-grow: 1;
 }
 
+.link {
+	color: #000000;
+	text-decoration: none;
+	text-decoration-skip-ink: none;
+}
+.link:hover, .link:focus {
+	text-decoration: underline;
+}
+.link:active {
+	text-decoration: none;
+}
 .title {
 	font-style: normal;
 	font-weight: 700;
 	font-size: 20px;
 	line-height: 27px;
 	margin: 0;
-	margin-bottom: 16px;
+	padding-bottom: 16px;
 }
 
 .descripion {
