--- a/Task3/src/components/Cart/styles.module.css
+++ b/Task3/src/components/Cart/styles.module.css
@@ -30,10 +30,15 @@
 	border-radius: 4px;
 }
 
+.spacer {
+	flex: 1 1 0;
+}
+
 .footer {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
+	justify-self: flex-end;
 }
 
 .total {
