--- a/Task3/src/pages/CartPage/styles.module.css
+++ b/Task3/src/pages/CartPage/styles.module.css
@@ -14,3 +14,18 @@
 	max-height: calc(100% - 55px);
 	align-self: flex-start;
 }
+
+
+@media screen and (max-width: 900px) {
+	.main {
+		padding: 25px 20px 0 20px;
+		grid-template-columns: auto;
+		grid-template-rows: auto auto;
+		max-height: fit-content;
+		gap: 40px;
+	}
+	.panel {
+		min-height: fit-content;
+		max-height: fit-content;
+	}
+}
