--- a/Task3/src/pages/StorePage/styles.module.css
+++ b/Task3/src/pages/StorePage/styles.module.css
@@ -13,3 +13,16 @@
 	padding-top: 8px;
 	margin-bottom: 55px;
 }
+
+
+@media screen and (max-width: 800px) {
+	.main {
+		padding: 25px 20px 0 20px;
+		grid-template-columns: auto;
+		grid-template-rows: auto auto;
+		max-height: fit-content;
+	}
+	.panel {
+		margin-bottom: 24px;
+	}
+}
